--- a/pipeline/DL_Config.json
+++ b/pipeline/DL_Config.json
@@ -351,7 +351,7 @@
 						"type": "DatasetReference",
 						"parameters": {
 							"Container": "data-sync",
-							"Directory": "OH_D365_DataSync/Config",
+							"Directory": "OH_D365_DataSync/D365",
 							"Filename": "transactioncurrency.csv"
 						}
 					}
@@ -457,7 +457,7 @@
 						"type": "DatasetReference",
 						"parameters": {
 							"Container": "data-sync",
-							"Directory": "OH_D365_DataSync/Config",
+							"Directory": "OH_D365_DataSync/D365",
 							"Filename": "stringmap.csv"
 						}
 					}
