Updating pipeline: PL_Config Updating pipeline: PL_CoreEntities Updating pipeline: PL_D365Lookups Updating pipeline: PL_Initialise Updating pipeline: PL_ReferenceEntities

--- a/pipeline/PL_Config.json
+++ b/pipeline/PL_Config.json
@@ -30,6 +30,7 @@
 						}
 					},
 					"enableStaging": false,
+					"dataIntegrationUnits": 2,
 					"translator": {
 						"type": "TabularTranslator",
 						"mappings": [
@@ -386,6 +387,7 @@
 						}
 					},
 					"enableStaging": false,
+					"dataIntegrationUnits": 2,
 					"translator": {
 						"type": "TabularTranslator",
 						"mappings": [
