Updating pipeline: PL_Config Updating dataset: DS_Dataverse Updating pipeline: PL_Control Updating pipeline: PL_ReferenceEntities Updating pipeline: PL_CoreEntities Updating pipeline: PL_LookupEntities Updating dataset: DS_Datalake_PipeDelimited_Reference Updating dataset: DS_Datalake_PipeDelimited_Reference Updating pipeline: PL_CoreEntities_DFs Updating pipeline: PL_D365Lookups Updating pipeline: PL_ReferenceEntities Updating pipeline: PL_CoreEntities

--- a/pipeline/PL_Config.json
+++ b/pipeline/PL_Config.json
@@ -339,7 +339,7 @@
 				},
 				"inputs": [
 					{
-						"referenceName": "DS_Dataverse_Eval",
+						"referenceName": "DS_Dataverse",
 						"type": "DatasetReference",
 						"parameters": {
 							"EntityName": "transactioncurrency"
@@ -446,7 +446,7 @@
 				},
 				"inputs": [
 					{
-						"referenceName": "DS_Dataverse_Eval",
+						"referenceName": "DS_Dataverse",
 						"type": "DatasetReference",
 						"parameters": {
 							"EntityName": "stringmap"
